added surrender action